# zhengjiethoughts

./: .gitignore
.github/: dependabot.yml
.github/workflows/: backend-ci.yml  codeql.yml  deploy.yml  frontend-ci.yml
backend/: .env.example  Cargo.toml  Dockerfile  fly.toml
backend/migrations/: 20260117225100_init.sql
backend/src/: main.rs  security.rs
frontend/: .env.example  astro.config.mjs  package-lock.json  package.json
frontend/src/components/: CommentSection.astro
frontend/src/content/: config.ts
frontend/src/content/blog/: hello-world.md
frontend/src/layouts/: Layout.astro
frontend/src/pages/: index.astro
frontend/src/pages/admin/: index.astro
frontend/src/pages/blog/: [...slug].astro
infra/: docker-compose.yml
